@startuml
'https://plantuml.com/class-diagram


abstract class Pizza{
prepare(): void
bake(): void
cut(): void
box(): void
}
class CheessPizza{

}

class GreekPizza{

}

Pizza <|-- CheessPizza
Pizza <|-- GreekPizza

class OrderPizza{
}

OrderPizza ..> Pizza
OrderPizza ..> CheessPizza
OrderPizza ..> GreekPizza
@enduml